<resources>
    <string name="app_name">English In Profession</string>
    <string name="title_activity_main3">English In Profession</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_ecp">English in computer operation</string>
    <string name="enVocForComButton">English Vocabulary for Computers</string>
    <string name="ButtonBooks">Books</string>
    <string name="ButtonTests">Tests</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="types_of_engine">Types of Engine</string>
    <string name="types_of_design">Types of Design</string>
    <string name="basically_the_engines_are_of">Basically the engines are of two types, and these are external combustion engines and internal combustion engines.\n\n1. External combustion engine: In external combustion engine, the combustion of fuel takes place outside the engine. Example: steam engine.\n\n2. Internal combustion engine: In internal combustion engine, the combustion of fuel takes place inside the engine. Two stroke and four stroke petrol and diesel engine are the examples of internal combustion engine.\n\nThere are different types of internal combustion (I.C.) engine and there classification depends upon various basis.\n\nThe I.C. engines are classified on the following basis:</string>
    <string name="reciprocating_engine_in_reciprocating_engine">1. Reciprocating engine: In reciprocating engine, there is a piston and cylinder, the piston does reciprocating (to and Fro) motion within the cylinder. Due to the reciprocating motion of the piston, it is called reciprocating engine. 2 stroke and four stroke engines are the common examples of reciprocating engine.\n2. Rotary engine: In rotary engine, the rotor does rotary motion to produce power. There is no reciprocating motion. A rotor is present in the chamber which does rotary motion inside a chamber. Wankel rotary engine , turbine engines are the rotary types of engine.</string>
    <string name="types_of_fuel_used">Types of Fuel Used</string>
    <string name="on_the_basis_of_types_of_fuel">On the basis of types of fuel used, the engine is classified as petrol engine, diesel engine and gas engine.\n1. Petrol engine: The engine which uses petrol for its working is called petrol engine.\n2. Diesel engine: The engine which uses diesel for its working is called diesel engine.\n3. Gas engine: An engine using gas fuel for the working is called gas engine.</string>
    <string name="cycle_of_operation">Cycle of Operation</string>
    <string name="on_the_basis_of_cycle_of">On the basis of cycle of operation the engine types are:\n1. Otto cycle engine: These types of engine works on Otto cycle.\n2. Diesel cycle engine: The engine working on diesel cycle is called diesel cycle engine.\n3. Dual cycle engine or semi-diesel cycle engine: The engine that works on both diesel as well as Otto cycle is called dual cycle engine or semi diesel cycle engine.</string>
    <string name="number_of_strokes">Number of Strokes</string>
    <string name="on_the_basis_of_number">On the basis of number of stroke, the types of engine are:\n1. Four Stroke Engine: It is an engine in which the piston moves four times i.e.2 upward (form BDC to TDC) and 2 downward (from TDC to BDC) movement in one cycle of power stroke is called four stroke engines.\nFour Stroke Engine\n2. Two Stroke Engine: The engine in which the piston does two times motion i.e. one from TDC to BDC and other from BDC to TDC to produce a power stroke is called two stroke engines.\nTwo Stroke Engine\n3. Hot spot ignition engine: This type of engine is not in practical use.</string>
    <string name="type_of_ignition">Type of Ignition</string>
    <string name="on_the_basis_of_ignition">On the basis of ignition, the engines are classified as:\n1. Spark ignition engine (S.I. engine): In spark ignition engine there is a spark plug which is fitted at the engine head. The spark plug produces spark after the compression of the fuel and ignites the air fuel mixture for the combustion. The petrol engines are spark ignition engine.\n2. Compression ignition engine (C.I. engine): In Compression ignition engine there is no spark plug at the cylinder head. The fuel is ignited by the heat of the compressed air. The diesel engines are compression ignition engine.</string>
    <string name="number_of_cylinders">Number of Cylinders</string>
    <string name="on_the_basis_of_number_of_cylinders">On the basis of number of cylinders present in the engine, the types of engine are:\n1. Single cylinder engine: An engine which consists of single cylinder is called single cylinder engine. Generally the single cylinder engines are used in motorcycles, scooter, etc.\n2. Double cylinder engine: The engine which consists of two cylinders is called double cylinder engine.\n3. Multi cylinder engine: An engine which consists of more than two cylinders is called multi cylinder engine. The multi cylinder engine may have three, four, six, eight, twelve and sixteen cylinder.</string>
    <string name="arrangement_of_cylinders">Arrangement of Cylinders</string>
    <string name="on_the_basis_of_arrangement">On the basis of arrangement of cylinders the engines classification is:\n1. Vertical engine: in vertical engines, the cylinders are arranged in vertical position as shown in the diagram.\n2. Horizontal engine: In horizontal engines, the cylinders are placed horizontal position as shown in the diagram given below.\n3. Radial engine: The radial engine is reciprocating type internal combustion engine configuration in which the cylinders radiate outward from a central crankcase like the spokes of a wheel. When it is viewed from the front, it resembles a stylized star and is called a ‘star’ engine. Before the gas turbine engine is not become predominant, it is commonly used for aircraft engines.\n4. V-engine: In v types of engine, the cylinders are placed in two banks having some angle between them. The angle between the two banks is keep as small as possible to prevent vibration and balancing problem.\n5. W type engine: In w type engines, the cylinders are arranged in three rows such that it forms W type arrangement. W type engine is made when 12 cylinder and 16 cylinder engines are produced.\n6. Opposed cylinder engine: In opposed cylinder engine, the cylinders are place opposite to each other. The piston and the connecting rod show identical movement. It is runs smoothly and has more balancing. The size of the opposed cylinder engine increase because of its arrangement.</string>
    <string name="valve_arrangement">Valve Arrangement</string>
    <string name="according_to_the_valve_arrangement">According to the valve arrangement of the inlet and exhaust valve in various positions in the cylinder head or block, the automobile engines are classified into four categories. These arrangements are named as ‘L’, ‘I’, ‘F’ and ‘T’. It is easy to remember the word ‘LIFT’ to recall the four valve arrangement.\n1. L-head engine: In these types of engine, the inlet and exhaust valves are arranged side by side and operated by a single camshaft. The cylinder and combustion chamber forms and inverted L.\n2. I-head engine: In I-head engines, the inlet and exhaust valves are located in the cylinder head. A single valve actuates all the valves. These types of engine are mostly used in automobiles.\n3. F-head engine: It is a combination of I-head and F-head engines. In this, one valve usually inlet valve is in the head and the exhaust valve lies in the cylinder block. Both the sets of valve are operated by the single camshaft.\n4. T-head engine: In T-head engines, the inlet valve located at one side and the exhaust valve on other side of the cylinder. Here two camshafts are required to operate, one for the inlet valve and other one is for the exhaust valve.</string>
    <string name="types_of_cooling">Types of cooling</string>
    <string name="on_the_basis_of_types_of_cooling">On the basis of types of cooling, the engines are classified as:\n1. Air cooled engines: In these engines, the air is used to cool the engines. In air cooled engines the cylinder barrels are separated and metal fins are used which provides radiating surface area that increase cooling. The air cooled engines are generally used in motorcycles and scooters.\n2. Water cooled engines: In water cooled engines, the water is used for the cooling of engine. Water cooled engines are used in cars, buses, trucks and other four wheeled vehicles, heavy duty motor vehicles. An anti-freezing agent is added in the water to prevent it from freezing during cold weather. Every water cooled engines has radiator for the cooling of hot water from the engine.</string>
    <string name="beside_above_types_of_engine">Beside above types of engine, the internal combustion engine is also classified on the basis of the following.</string>
    <string name="speed">Speed</string>
    <string name="on_the_basis_of_speed">On the basis of speed, the types of engines are:\n1. Low speed engine\n2. Medium speed engine\n3. High speed engine</string>
    <string name="method_of_fuel_injection">Method of Fuel Injection</string>
    <string name="on_the_basis_of_method_of_fuel_injection">On the basis of method of fuel injection the engines are classified as:\n1. Carburettor engine\n2. Air injection engine\n3. Airless or solid injection engine</string>
    <string name="method_of_governing">Method of Governing</string>
    <string name="hit_and_miss_governed_engine">1. Hit and miss governed engine: It is an engine type in which the entry of the fuel is controlled by the governor. It controls the speed of the engine by cutting off the ignition and fuel supply of the engine at very high speed.\n2. Qualitatively governed engine\n3. Quantitatively governed engine</string>
    <string name="application">Application</string>
    <string name="stationary_engine_stationary">1. Stationary engine: Stationary engine is an engine in which its framework does not move. It is used to drive immobile equipment like pump, generator, mill or factory machinery etc.\n2. Automotive engine: These are the types of engines which are used in automobile industries. For example: petrol engine, diesel engine, gas engine are internal combustion engines falls in the category of automotive engine.\n3. Locomotive engine: The engines which are used in trains are called locomotive engines.\n4. Marine engine: The engines which are used in marines for boat or ship propulsion is called marine engine.\n5. Aircraft engine: Types of engine which are used in aircraft is called aircraft engine. Radial and gas turbine engines are used in aircraft propulsion.</string>
    <string name="computer_components">Computer components</string>
</resources>