<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    app:layout_constraintWidth_default="percent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/english_in_computerId"
        tools:context=".ui.computers.ComputersFragment">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/english_voc_for_computer_card_view1"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewCard1"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="computer parts"
                    android:scaleType="centerCrop"
                    android:src="@drawable/english_vocabulary_for_computers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_text1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/enVocForComButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewCard1"
                    app:layout_constraintWidth_percent=".65" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/english_voc_for_computer_card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintTop_toBottomOf="@+id/english_voc_for_computer_card_view1"
            card_view:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewCard2"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="computer parts"
                    android:scaleType="centerCrop"
                    android:src="@drawable/computer_components"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_text2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/computer_components"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewCard2"
                    app:layout_constraintWidth_percent=".65" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/english_voc_for_computer_card_view3"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintTop_toBottomOf="@+id/english_voc_for_computer_card_view2"
            card_view:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewCard3"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="computer parts"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tests"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_text3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/ButtonTests"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewCard3"
                    app:layout_constraintWidth_percent=".65" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/english_voc_for_computer_card_view4"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/english_voc_for_computer_card_view3"
            app:layout_constraintBottom_toBottomOf="@+id/english_in_computerId"
            card_view:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewCard4"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="computer parts"
                    android:scaleType="centerCrop"
                    android:src="@drawable/books"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_text4"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/ButtonBooks"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewCard4"
                    app:layout_constraintWidth_percent=".65" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>